[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
homepage = "https://world.org/world-chain"
repository = "https://github.com/worldcoin/world-chain/"

[workspace]
resolver = "2"
members = [
    "crates/toolkit",
    "crates/world/bin",
    "crates/world/flashblocks",
    "crates/world/node",
    "crates/world/payload",
    "crates/world/rpc",
    "crates/world/pbh",
    "crates/world/pool",
    "crates/world/test-utils",
    "crates/world/chainspec",
    "crates/tests/sepolia",
    "crates/tests/devnet",
]

default-members = ["crates/world/bin"]

[profile.maxperf]
codegen-units = 1
inherits = "release"
lto = "fat"

[workspace.lints]

[workspace.dependencies]
# internal
world-chain-builder-node = { path = "crates/world/node" }
world-chain-builder-pbh = { path = "crates/world/pbh" }
world-chain-builder-payload = { path = "crates/world/payload" }
world-chain-builder-rpc = { path = "crates/world/rpc" }
world-chain-builder-pool = { path = "crates/world/pool" }
world-chain-builder-chainspec = { path = "crates/world/chainspec" }
world-chain-builder-test-utils = { path = "crates/world/test-utils" }
flashblocks = { path = "crates/world/flashblocks" }

# reth
reth = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-cli-util = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-cli = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-evm = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c", features = [
    "op",
] }
reth-db = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-db-api = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-provider = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c", features = [
    "test-utils",
] }
reth-chain-state = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-rpc-engine-api = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-basic-payload-builder = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-transaction-pool = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-rpc-server-types = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-prune-types = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-trie = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-eth-wire-types = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-stages-types = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-trie-db = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-primitives-traits = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-node-builder = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-engine-local = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c", features = [
    "op",
] }
reth-metrics = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-node-api = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-payload-builder = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-payload-util = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-payload-validator = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-revm = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c", default-features = false }
reth-tasks = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-chainspec = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }

# reth-optimism
reth-primitives = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-evm = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-node = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-cli = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-rpc = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-consensus = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-chainspec = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth_payload_util = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-payload-builder = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-forks = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-primitives = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-e2e-test-utils = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-consensus = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-node-core = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-tracing = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-rpc-layer = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-node-ethereum = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-optimism-storage = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }

# alloy op
op-alloy-consensus = "0.18.13"
op-alloy-rpc-types = "0.18.13"
op-alloy-rpc-types-engine = "0.18.13"
op-alloy-network = "0.18.13"
alloy-op-hardforks = "0.2.13"


# alloy
alloy = { version = "1.0.23" }
alloy-json-rpc = { version = "1.0.23", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-provider = { version = "1.0.23", default-features = false }
alloy-rpc-client = { version = "1.0.23", default-features = false }
alloy-transport-http = { version = "1.0.23", default-features = false }
alloy-transport = { version = "1.0.23", default-features = false }
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-network = { version = "1.0.23", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false }
alloy-rpc-types-eth = { version = "1.0.23", default-features = false }
alloy-rpc-types = { version = "1.0.23", features = [
    "eth",
], default-features = false }
alloy-rpc-types-engine = { version = "1.0.23" }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-genesis = { version = "1.0.23", default-features = false }
alloy-rpc-types-debug = "1.0.23"
alloy-signer = { version = "1.0.23", default-features = false }
alloy-signer-local = { version = "1.0.23", default-features = false }
alloy-sol-types = "1.1.0"
alloy-serde = { version = "1.0.11", default-features = false }
alloy-hardforks = "0.2.7"


# revm
revm = { version = "27.0.3", default-features = false }
revm-state = { version = "*", default-features = false }
revm-primitives = { version = "20.0.0", default-features = false }
op-revm = { version = "8.0.3", default-features = false }
alloy-op-evm = { version = "0.17", default-features = false }

# rpc
jsonrpsee = { version = "0.25.1", features = ["server", "client", "macros"] }
jsonrpsee-core = { version = "0.25.1" }
jsonrpsee-types = "0.25.1"

# 3rd party
rollup-boost = { git = "https://github.com/flashbots/rollup-boost", rev = "2ab9898040a14cece2802655767c68ff876f6573" }
flashblocks-p2p = { git = "https://github.com/flashbots/rollup-boost", rev = "2ab9898040a14cece2802655767c68ff876f6573" }
metrics = "*"
metrics-derive = "*"

schnellru = "0.2.4"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"
tokio-tungstenite = "0.26.2"
tokio-stream = "0.1.11"

futures = "0.3"
futures-util = "*"
chrono = "0.4"
thiserror = "1"
strum = { version = "0.27", features = ["derive"] }
bytemuck = "1"
semaphore-rs = "0.3.1"
semaphore-rs-tree = "0.3.1"
semaphore-rs-proof = "0.3.1"
clap = { version = "4", features = ["derive", "env"] }
eyre = { version = "0.6", package = "color-eyre" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
parking_lot = "0.12"
derive_more = { version = "2", default-features = false, features = ["full"] }
dotenvy = "0.15.7"
tikv-jemallocator = { version = "0.6" }
bytes = "1.7.2"
hex = "0.4.3"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
test-case = "3"
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
serde_json = "1"
rand = { version = "0.9", features = ["small_rng"] }
reqwest = { version = "0.12", default-features = false }
bon = "3.3.0"
rayon = "1.10.0"
auto_impl = "1"
async-trait = "0.1.88"
tower = "0.5"
base64 = "*"
# WIP
[patch.crates-io]
jsonrpsee = { git = "https://github.com/0xOsiris/jsonrpsee", rev = "cb9a22f" }
jsonrpsee-core = { git = "https://github.com/0xOsiris/jsonrpsee", rev = "cb9a22f" }
jsonrpsee-server = { git = "https://github.com/0xOsiris/jsonrpsee", rev = "cb9a22f" }
jsonrpsee-types = { git = "https://github.com/0xOsiris/jsonrpsee", rev = "cb9a22f" }
jsonrpsee-http-client = { git = "https://github.com/0xOsiris/jsonrpsee", rev = "cb9a22f" }
# reth = { path = "../../paradigmxyz/reth/bin/reth" }
# reth-cli-util
# reth-evm
# reth-db
# reth-db-api
# reth-provider
# reth-basic-payload-builder
# reth-transaction-pool
# reth-rpc-server-types
# reth-prune-types
# reth-trie
# reth-chain-state
# reth-chainspec
# reth-eth-wire-types
# reth-execution-types
# reth-stages-types
# reth-trie-db
# reth-primitives-traits
# reth-node-builder
# reth-node-api
# reth-payload-builder
# reth-payload-builder-primitives
# reth-payload-util
# reth-payload-validator
# reth-revm
# reth-tasks
# reth-primitives
# reth-optimism-evm
# reth-optimism-node
# reth-optimism-cli
# reth-optimism-rpc
# reth-optimism-consensus
# reth-optimism-chainspec
# reth_payload_util
# reth-optimism-payload-builder
# reth-optimism-forks
# reth-optimism-primitives
# reth-e2e-test-utils
# reth-consensus
# reth-node-core
# reth-tracing
# reth-rpc-layer
