[package]
name = "world-chain-builder-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
world-chain-builder-payload.workspace = true
world-chain-builder-pool.workspace = true
world-chain-builder-test-utils = { workspace = true, optional = true }
world-chain-builder-pbh = { workspace = true, optional = true }

rollup-boost.workspace = true
flashblocks-p2p.workspace = true
flashblocks.workspace = true
reth-chain-state.workspace = true
reth.workspace = true
reth-db = { workspace = true, optional = true }
reth-node-builder.workspace = true
reth-engine-local.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-node.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-storage.workspace = true
reth-optimism-payload-builder = {workspace = true, default-features = true}
reth-optimism-rpc.workspace = true
reth-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-tracing = { workspace = true, optional = true }
reth-optimism-forks.workspace = true
reth-provider.workspace = true
reth-prune-types = { workspace = true, optional = true }
reth-trie = { workspace = true, optional = true }
reth-trie-db.workspace = true
reth-basic-payload-builder.workspace = true
reth-transaction-pool.workspace = true
reth-e2e-test-utils = { workspace = true, optional = true }
reth-node-api.workspace = true
reth-rpc-engine-api.workspace = true
base64.workspace = true
alloy-eips = { workspace = true, optional = true }
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rlp.workspace = true
alloy-sol-types = { workspace = true, optional = true }
op-alloy-consensus.workspace = true
op-alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-engine.workspace = true
revm-primitives = { workspace = true, optional = true }
reth-payload-builder.workspace = true
alloy-consensus.workspace = true
tokio = { workspace = true }
parking_lot.workspace = true
eyre.workspace = true
tower.workspace = true
futures = { workspace = true, optional = true }
clap.workspace = true
chrono = { workspace = true, optional = true }
tracing.workspace = true
jsonrpsee.workspace = true

[dev-dependencies]
world-chain-builder-pbh.workspace = true
world-chain-builder-rpc.workspace = true
world-chain-builder-pool = { workspace = true, features = ["test"] }

reth-rpc-layer = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
reth-e2e-test-utils.workspace = true
reth-evm.workspace = true
reth-node-core.workspace = true
reth-optimism-consensus.workspace = true
reth-optimism-evm.workspace = true
revm-primitives.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true
alloy-genesis.workspace = true
alloy-network.workspace = true
alloy-signer-local.workspace = true
reth-rpc-engine-api = { git = "https://github.com/0xOsiris/reth", rev = "b8e439c" }
op-alloy-rpc-types-engine.workspace = true
alloy-eips.workspace = true
alloy-json-rpc = { workspace = true}
tokio-tungstenite.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
criterion.workspace = true
alloy-rpc-types-engine = { workspace = true, features = ["serde"]}
alloy-rpc-client.workspace = true
semaphore-rs = { workspace = true, features = ["depth_30"] }
alloy-consensus.workspace = true
serde_json.workspace = true
chrono.workspace = true
alloy-rpc-types-eth.workspace = true
alloy = { version = "1.0.23", features = ["full"] }
alloy-provider = { workspace = true }

[features]
default = []
test = [
    "world-chain-builder-test-utils",
    "world-chain-builder-pbh",
    "dep:reth-e2e-test-utils",
    "dep:reth-tracing",
    "dep:reth-prune-types",
    "dep:reth-trie",
    "dep:reth-db",
    "dep:alloy-sol-types",
    "dep:alloy-eips",
    "dep:revm-primitives",
    "dep:futures",
    "dep:chrono",
]
