[package]
name = "flashblocks-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true


[dependencies]
# reth
reth.workspace = true
reth-basic-payload-builder.workspace = true
reth-chain-state.workspace = true
reth-evm.workspace = true
reth-provider.workspace = true
reth-primitives.workspace = true
reth-transaction-pool.workspace = true
reth-primitives-traits.workspace = true
reth-payload-util.workspace = true
revm.workspace = true

# op-reth
reth-optimism-forks.workspace = true
reth-optimism-node.workspace = true
reth-optimism-chainspec.workspace = true
reth-optimism-payload-builder.workspace = true
reth-optimism-primitives.workspace = true
reth-optimism-consensus.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-serde = "0.7"


# tokio
tokio.workspace = true
tokio-tungstenite = "0.26.2"

# misc
clap.workspace = true
